# plantuml-generator

./: .dockerignore  .gitignore  AGENTS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  Cargo.toml  DIAGRAM_GENERATION_PARALLELIZATION_ANALYSIS.md  Dockerfile  LIBRARY_GENERATION_WORK_UNITS_ANALYSIS.md  LICENSE  PR_REVIEW_SUMMARY.md  README.md  REVIEW_PR30.md  THREADING_TEST_COVERAGE.md  build.rs  release.toml
.github/: CONTRIBUTING.md  copilot-instructions.md
.github/agents/: critical-thinking.agent.md  gilfoyle.agent.md  github-actions-expert.agent.md  implementation-plan.agent.md  plan.agent.md  prd.agent.md  principal-software-engineer.agent.md  rust-beast-mode.agent.md  rust-gpt-4.1-beast-mode.agent.md  rust-mcp-expert.agent.md  tdd-green.agent.md  tdd-red.agent.md  tdd-refactor.agent.md
.github/instructions/: rust-mcp-server.instructions.md  spec-driven-workflow-v1.instructions.md
.github/prompts/: create-implementation-plan.prompt.md  rust-mcp-server-generator.prompt.md
.github/workflows/: Continuous-Integration.yml  copilot-setup-steps.yml  pr-commit-validation.yml
benches/: diagram_generate_benchmark.rs  thread_pool_benchmark.rs
docs/: TASK-3.2-IMPLEMENTATION-SPEC.md  multi-threading.md
scripts/: install_pgen.sh  release-final.sh
src/: app.rs  cli.rs  constants.rs  counter.rs  error.rs  lib.rs  main.rs  plantuml.rs  result.rs  tera.rs  urn.rs  utils.rs
src/cmd/: mod.rs
src/cmd/completion/: mod.rs
src/cmd/diagram/: mod.rs
src/cmd/diagram/generate/: config.rs  mod.rs
src/cmd/workspace/: mod.rs
src/cmd/workspace/init/: config.rs  mod.rs
src/cmd/workspace/install/: config.rs  mod.rs
src/cmd/workspace/manifest/: artifact.rs  mod.rs  workspace.rs
src/manifest/: element.rs  example.rs  icon.rs  item.rs  library.rs  module.rs  package.rs
src/threading/: config.rs  errors.rs  mod.rs  pool.rs  resource_monitor.rs  traits.rs
test/: full_snippet_local_path.puml  full_snippet_remote_path.puml  library-empty.yaml  library-full.yaml  library-icon_reference.yaml  library-simple.yaml  sprite_value_A.puml  sprite_value_B.puml  workspace-simple.yaml
test/source/: diagrams_a.puml  diagrams_c.plantuml
test/source/folder_a/: diagrams_b.puml
test/tera/: c4model_bootstrap.tera  c4model_documentation.tera  c4model_example.tera  c4model_item_element.tera  c4model_item_snippet.tera  custom_item_snippet.tera  custom_item_source.tera  eventstorming_bootstrap.tera  eventstorming_item_element.tera  eventstorming_item_snippet.tera  package_bootstrap_bis.tera  package_example_test.tera
tests/: e2e_diagram_generate.rs  e2e_library_determinism.rs  e2e_threading.rs
tests/common/: mod.rs
