[package]
name = "plantuml-generator"
description = "A command line utility to generate stuff for and with PlantUML."
readme = "README.md"
homepage = "https://github.com/tmorin/plantuml-generator#readme"
repository = "https://github.com/tmorin/plantuml-generator"
version = "1.14.0"
authors = ["Thibault Morin <thibault@morin.io>"]
edition = "2021"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["plantuml", "generator"]
include = [
    "build.rs",
    "src/**/*",
    "CHANGELOG.md",
    "LICENSE",
    "README.md",
]

[[bin]]
name = "plantuml-generator"

[dependencies]
anyhow = { version = "1", features = [] }
chrono = { version = "0.4" }
clap_complete = { version = "4" }
clap = { version = "4", features = ["env", "cargo"] }
zip-extract = "0.1"
env_logger = { version = "0.11", default-features = false }
glob = { version = "0.3" }
heck = { version = "0.5" }
image = { version = "0.25" }
log = { version = "0.4" }
openssl = { version = "0.10", optional = true }
raster = { version = "0.2" }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = { version = "0.9" }
schemars = { version = "0.8", features = ["impl_json_schema"] }
tera = { version = "1" }

[features]
# If compiling on a system without OpenSSL installed, or cross-compiling for a different
# architecture, enable this feature to compile OpenSSL as part of the build.
# See https://docs.rs/openssl/#vendored for more.
vendored-openssl = ["openssl/vendored"]

[profile.release]
lto = true
codegen-units = 1

[package.metadata.deb]
section = "utility"
extended-description = """A command line utility to generate stuff for and with PlantUML."""
